--- a/requirements.txt
+++ b/requirements.txt
@@ -7,7 +7,7 @@ bleach==3.3.0
 certifi==2020.4.5.1
 cffi==1.14.0
 chardet==3.0.4
-codecov==2.1.3
+# codecov==2.1.3
 contextlib2==0.6.0.post1
 coverage==5.1
 cycler==0.10.0
@@ -38,10 +38,10 @@ nbconvert==5.6.1
 nbformat==5.0.6
 nose==1.3.7
 notebook==6.1.5
-numpy==1.18.1
+numpy==1.21.0
 opt-einsum==3.1.0
 packaging==20.4
-pandas==1.0.3
+pandas==1.3.5
 pandocfilters==1.4.2
 parso==0.7.0
 pexpect==4.8.0
@@ -75,7 +75,7 @@ sphinxcontrib-qthelp==1.0.3
 sphinxcontrib-serializinghtml==1.1.4
 terminado==0.8.3
 testpath==0.4.4
-torch==1.7.1
+torch==1.10.0
 tornado==6.0.4
 tqdm==4.46.0
 traitlets==4.3.3
@@ -84,3 +84,4 @@ wcwidth==0.1.9
 webencodings==0.5.1
 widgetsnbextension==3.5.1
 zipp==3.1.0
+scikit-learn
